# ghostlink

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  config.toml.example  docker-compose.yml
assets/: ghostlink.icns
assets/logo/: ghostlink-logo.icns
client/: Cargo.toml
client/src/: config.rs  error.rs  main.rs
client/src/agent/: heartbeat.rs  mod.rs  session_manager.rs
client/src/capture/: encoder_factory.rs  encoding.rs  frame_protocol.rs  frame_streaming.rs  h264_encoder.rs  hevc_encoder.rs  mod.rs  monitor_manager.rs  nvenc_encoder.rs  wayland.rs  wayland_fast.rs  wayland_legacy.rs  x11.rs  x11_fast.rs
client/src/capture/wayland/: capturer.rs  mod.rs  pipewire.rs  portal.rs
client/src/connection/: hybrid.rs  mod.rs  monitor_protocol.rs  p2p.rs
client/src/credentials/: credential_manager.rs
client/src/input/: input_protocol.rs  input_service.rs  linux.rs  mod.rs  wayland.rs  wayland_portal.rs  x11.rs  x11_input.rs
client/src/input/linux/: mod.rs  wayland.rs  x11.rs
client/src/recording/: mod.rs  session_recorder.rs
client/src/service/: linux.rs  mod.rs
client/src/session/: mod.rs  window.rs
client/src/toolbox/: mod.rs  server_sync.rs  storage.rs
client/src/ui/: connection_banner.rs
deploy/nginx/: ghostlink.conf
docker/: config.toml  docker-compose.override.yml  init.sql
nginx/: ghostlink-common.conf  ghostlink-relay.cktechx.com.conf  ghostlink.cktechx.com.conf  ghostlink.conf
nginx/sites/: glink.cktechx.com.conf
scripts/: deploy.sh
server/: Cargo.toml  Leptos.toml
server/assets/: app.css
server/migrations/: 001_initial_schema.sql
server/src/: api.rs  branding.rs  config.rs  database.rs  device_manager.rs  direct_connect.rs  main.rs  models.rs  pam.rs  relay.rs  terminal.rs  toolbox.rs  vpn_integration.rs
server/src/auth/: device_auth.rs  jwt.rs  oidc.rs
server/src/relay/: connection_broker.rs  load_balancer.rs  mod.rs  rendezvous.rs
server/src/web/: api_client.rs  app.rs  components.rs  dashboard.rs  device_discovery.rs  mod.rs  monitor_controls.rs  realtime.rs  session_launcher.rs  sessions.rs
src/: config.rs  main.rs
src/api/: mod.rs
src/models/: mod.rs
src/relay/: messages.rs  mod.rs  server.rs
web/: index.html
web/js/: dashboard.js
