[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Frontend framework
leptos = { version = "0.6", features = ["csr"] }
leptos_axum = { version = "0.6" }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"
gloo-utils = "0.2"

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Web framework and async runtime
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }

# WebSocket and networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Database and authentication
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
argon2 = "0.5"
jsonwebtoken = "9.2"

# Crypto and security
ring = "0.17"
rustls = "0.22"
rustls-pemfile = "2.0"

# Logging and error handling
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Image processing for screen capture
image = "0.24"
png = "0.17"

# Testing dependencies
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
tempfile = "3.8"
serial_test = "3.0"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
