[package]
name = "ghostlink-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Networking and async
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Configuration and CLI
config.workspace = true
clap.workspace = true

# Logging and error handling
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Time handling
chrono.workspace = true

# Cross-platform system info
sysinfo = "0.30"
hostname = "0.3"

# Image processing and encoding
png = "0.17"
image.workspace = true

# Additional networking
url = "2.0"

# Async traits
async-trait = "0.1"

# Configuration
toml = "0.8"

# High-performance screen capture and input dependencies  
x11rb = { version = "0.12", features = ["shm", "damage", "xfixes", "randr", "composite", "xtest"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }

# Frame protocol dependencies
crc32fast = "1.4"
hex = "0.4"

# Video encoding for 60fps streaming
ffmpeg-next = { version = "7.0", optional = true }
openh264 = { version = "0.6", optional = true }

# Performance utilities
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.8"
bytemuck = "1.14"

# Native input control
input = { version = "0.8", optional = true }
evdev = { version = "0.12", optional = true }

# Screen capture and input simulation (platform-specific)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.21", optional = true }
xcb = { version = "1.4", optional = true }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true
serial_test.workspace = true

[features]
default = ["x264-encoder", "nvenc"]
x11-legacy = ["dep:x11"]
wayland-capture = []
x264-encoder = ["dep:ffmpeg-next"]
openh264-encoder = ["dep:openh264"]
native-input = ["dep:input", "dep:evdev"]
nvenc = []
qsv = []
videotoolbox = []
