[package]
name = "ghostlink-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Networking and async
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Configuration and CLI
config.workspace = true
clap.workspace = true

# Logging and error handling
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Time handling
chrono.workspace = true

# Cross-platform system info
sysinfo = "0.30"
hostname = "0.3"

# Image processing and encoding
png = "0.17"
image.workspace = true

# Additional networking
url = "2.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Async traits
async-trait = "0.1"

# Configuration
toml = "0.8"

# High-performance screen capture and input dependencies
x11rb = { version = "0.12", features = ["shm", "damage", "xfixes", "randr", "composite", "xtest"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }

# XDG Portal + PipeWire for Wayland-native capture
dbus = { version = "0.9", features = ["vendored"] }
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
lazy_static = "1.4"

# Frame protocol dependencies
crc32fast = "1.4"
hex = "0.4"

# Video encoding for 60fps streaming
ffmpeg-next = { version = "7.0", optional = true }
openh264 = { version = "0.6", optional = true }

# Performance utilities
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.8"
bytemuck = "1.14"

# Native input control
input = { version = "0.8", optional = true }
evdev = { version = "0.12", optional = true }

# Desktop GUI (viewer mode)
tauri = { version = "1.5", features = ["shell-open", "fs-all", "window-all"], optional = true }
pixels = { version = "0.13", optional = true }
winit = { version = "0.29", optional = true }
rfd = { version = "0.14", optional = true }  # File dialogs
rdev = { version = "0.4", optional = true }  # Cross-platform input simulation
arboard = { version = "3.3", optional = true }  # Clipboard
dirs = "5.0"
notify = { version = "6.1", optional = true }  # File watching

# Screen capture and input simulation (platform-specific)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.21", optional = true }
xcb = { version = "1.4", optional = true }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true
serial_test.workspace = true

[features]
default = []
x11-legacy = ["dep:x11"]
wayland-capture = []
x264-encoder = ["dep:ffmpeg-next"]
openh264-encoder = ["dep:openh264"]
native-input = ["dep:input", "dep:evdev"]
nvenc = []
qsv = []
videotoolbox = []

# Desktop viewer mode
viewer = ["dep:tauri", "dep:pixels", "dep:winit", "dep:rfd", "dep:rdev", "dep:arboard", "dep:notify"]
